--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "react": "^17.0.2",
+    "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "strip": "^3.0.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
