--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "strip": "^3.0.0",
+    "strip-ansi": "^7.0.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
