--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
+    "husky": "^7.0.4",
     "snyk": "^1.763.0"
   }
 }
