--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "expense-tracker-client",
   "version": "0.1.0",
@@ -40,14 +39,34 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^15.0.0",
-    "@commitlint/config-conventional": "^15.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@commitlint/cli": "^16.0.1",
+    "@commitlint/config-conventional": "^16.0.0",
+    "@testing-library/dom": "8.11.1",
+    "@types/node": "*",
+    "autoprefixer": "^10.0.2",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
+    "postcss": "^8.1.0",
     "prettier": "^2.5.1",
-    "snyk": "^1.763.0"
+    "react-is": ">= 16.8.0",
+    "snyk": "^1.763.0",
+    "typescript": ">=3.2.1 <4.0.0 || >= 4.0.0 <5.0.0"
   },
   "lint-staged": {
     "*.{js,css,md}": "prettier --write"
+  },
+  "peerDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@testing-library/dom": "8.11.1",
+    "@types/node": "*",
+    "autoprefixer": "^10.0.2",
+    "postcss": "^8.1.0",
+    "react-is": ">= 16.8.0",
+    "typescript": ">=3.2.1 <4.0.0 || >= 4.0.0 <5.0.0"
   }
 }
